<resources>
    <string name="app_name">Smart animals</string>
    <string name="name_cat">Гарфілд</string>
    <string name="discription_cat">Га́рфілд (англ. Garfield)  — популярний кіт, герой коміксів і мультфільльмів, вигаданий Джимом Девісом.
    Гарфілд обожнює нічого не робити і їсти лазанью, але по незрозумілій причині ненавидить родзинки.
        Варто також додати, що дні сну і абсолютної пасивності різко змінюються моментами божевілля,
        коли все, що стоїть на дорозі у Гарфілда, ризикує бути знищеним його кігтями.</string>
    <string name="name_dog">Скубі Ду</string>
    <string name="discription_dog">Скуберт (Скубі) Ду (англ. Scooby Doo) — вигаданий пес та головний герой мультсеріалу з однойменною ж назвою, яка стала героєм 70-х.
        Вперше персонаж з\'явився в мультсеріалі «Скубі-Ду, Де ти!» в 1969 році. Озвучує — Френк Уелкер.</string>
    <string name="name_donkey">Віслюк</string>
    <string name="discription_donkey">Віслюк (англ. Donkey) - персонаж медіафраншизи "Шрек".
        Він є адаптацією персонажа, що з\'явився в оповіданні "Шрек!".
        У франшизі Віслюк найкращий друг і помічник Шрека, чоловік Драконихи.
        В оригіналі його озвучує Едді Мерфі.</string>
</resources>