<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <androidx.cardview.widget.CardView
        android:id="@+id/CatCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageCat"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/cat" />

            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textNameCat"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_cat" />

                <TextView
                    android:id="@+id/textDiscriptionCat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="13dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/discription_cat" />
            </LinearLayout>

            <Button
                android:id="@+id/button_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Детальніше" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/DogCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CatCard"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imagedog"
                app:srcCompat="@drawable/dog"
                android:scaleType="centerCrop"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textNameDog"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_dog"/>
                <TextView
                    android:id="@+id/textDiscriptionDog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/discription_dog"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="13dp"
                    android:ellipsize="end"
                    android:maxLines="3"/>
            </LinearLayout>
            <Button
                android:id="@+id/button_dog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Детальніше"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/DonkeyCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DogCard"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageDonkey"
                app:srcCompat="@drawable/donkey"
                android:scaleType="centerCrop"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <LinearLayout
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textNameDonkey"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_donkey"/>
                <TextView
                    android:id="@+id/textDiscriptionDonkey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/discription_donkey"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="13dp"
                    android:ellipsize="end"
                    android:maxLines="3"/>
            </LinearLayout>
            <Button
                android:id="@+id/button_donkey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Детальніше"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>



